--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,25 +1,25 @@
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('templars.jpg') %>
-						<div class="caption">
-							<h4>Toledo Templar in the legend</h4>
-							<p>The mystery of the Knights Templar and the signs...</p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
-				<li class="thumbnails_home">
-					<div class="thumbnail labels">
-						<%= image_tag('magic.jpg') %>
-						<div class="caption">
-							<h4>Magical Journey to Toledo</h4>
-							<p>Toledo, an epicenter of the riddles...</p>
-							<p>
-								<a class="btn btn-primary" href="#">Add to my guide</a>
-							</p>
-						</div>
-					</div>
-				</li>
+<li class="thumbnails_home">
+  <div class="thumbnail labels">
+    <%= image_tag('templars.jpg') %>
+    <div class="caption">
+      <h4>Toledo Templar in the legend</h4>
+      <p>The mystery of the Knights Templar and...</p>
+      <p>
+        <a class="btn btn-primary" href="#">Add</a>
+      </p>
+    </div>
+  </div>
+</li>
+<li class="thumbnails_home">
+  <div class="thumbnail labels">
+    <%= image_tag('magic.jpg') %>
+    <div class="caption">
+      <h4>Magical Journey to Toledo</h4>
+      <p>Toledo, an epicenter of the riddles...</p>
+      <p>
+        <a class="btn btn-primary" href="#">Add</a>
+      </p>
+    </div>
+  </div>
+</li>
 
