--- a/app/views/layouts/_header_dropdown.erb
+++ b/app/views/layouts/_header_dropdown.erb
@@ -2,7 +2,7 @@
   <button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown">go to<span class="caret"></span></button>
   <ul class="dropdown-menu">
     <li>
-      <a class="" href="/plannings">Profile</a>
+      <%= link_to "Profile", current_subject %>
     </li>
     <li>
       <a class="" href="/plannings">Plannings</a>
