Add fluid iframe vish excursions

--- a/app/views/diaries/_book.html.erb
+++ b/app/views/diaries/_book.html.erb
@@ -1,5 +1,31 @@
-<% if @diary.id != 2 %>
-  <iframe id="presentation_iframe" src="http://vishub.org/excursions/154.full" width="910" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
-<% else %>
-  <iframe id="presentation_iframe" src="http://vishub.org/excursions/160.full" width="910" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+<div id="presentation_wrapper">
+  <% if @diary.id != 2 %>
+    <iframe id="presentation_iframe" src="http://vishub.org/excursions/154.full" style="border:0" scrolling="no" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+  <% else %>
+    <iframe id="presentation_iframe" src="http://vishub.org/excursions/160.full" style="border:0" scrolling="no" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+  <% end %>
+</div>
+
+<%= javascript_tag do %>
+  function width(){
+     return window.innerWidth||document.documentElement.clientWidth||document.body.clientWidth||0;
+  }
+  function height(){
+     return window.innerHeight||document.documentElement.clientHeight||document.body.clientHeight||0;
+  }
+
+  function resize_iframe() {
+    $('#presentation_wrapper').css('width', $('#book').width());
+    $('#presentation_iframe').css('width', $('#book').width());
+    $('#presentation_wrapper').css('height', height() - 200);
+    $('#presentation_iframe').css('height', height() - 200);
+  }
+
+  resize_iframe();
+
+  var resizeTimer;
+  $(window).resize(function() {
+    clearTimeout(resizeTimer);
+    resizeTimer = setTimeout(resize_iframe, 100);
+  });
 <% end %>
