Adjust frontpage images and form

--- a/app/views/layouts/frontpage.html.erb
+++ b/app/views/layouts/frontpage.html.erb
@@ -6,7 +6,7 @@
 <%= render :partial => "layouts/head" %>
   </head>
 
-  <body class="fondo">
+  <body>
     <div class="wrapper container">
       <header id="header">
         <%= render :partial => "layouts/header" %>
@@ -30,6 +30,9 @@
     <footer class="footer">
       <%#= render :partial => "layouts/footer" %>
     </footer>
+    <script>
+      $.backstretch("/assets/himalaya.jpg");
+    </script>
   </body>
 </html>
 
