--- a/app/assets/stylesheets/city/smartCity/frontpage.css.sass
+++ b/app/assets/stylesheets/city/smartCity/frontpage.css.sass
@@ -4,7 +4,7 @@
 		margin-right: auto
 		width: 150px
 		display: block
-		margin-top: 100px
+		margin-top: 10%
 
 .input_username
 	color: #fff
@@ -22,16 +22,11 @@
 		display: block
 		margin-left: auto
 		margin-right: auto
-		margin-top: 150px
+		margin-top: 15%
 		@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
 	h1, h2, h3, label, a,
 		color: #FFF
 
-.fondo   
-	background-image: url(himalaya.jpg)
-	background-size: 100%
-	background-repeat-x: none
-	background-repeat-y: none
 .pois
 	font-size: 12px
 
