--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,5 @@
 @import "city/bootstrap-rewrite/variables"
+@import "city/binakuru/variables"
 //booststrap
 @import "bootstrap"
 @import "bootstrap-responsive"
@@ -51,9 +52,9 @@
 
 //smart city
 @import "city/smartCity/headers"
-@import "city/smartCity/home"
-@import "city/smartCity/items"
-@import "city/smartCity/layout"
+//@import "city/smartCity/home"
+//@import "city/smartCity/items"
+//@import "city/smartCity/layout"
 @import "city/smartCity/profile"
 @import "city/smartCity/guides"
 @import "city/smartCity/planification"
@@ -64,8 +65,7 @@
 @import "city/smartCity/comment"
 
 
-//smart city b-rewrite
-@import "city/smartCity/b-rewrite/_responsive-767px-max"
-@import "city/smartCity/b-rewrite/_responsive-768px-979px"
-@import "city/smartCity/b-rewrite/_responsive-1200px-min"
-
+//binakuru
+@import "city/binakuru/trips"
+@import "city/binakuru/plannings"
+@import "city/binakuru/layout"
