--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -56,9 +56,9 @@
 //@import "city/smartCity/items"
 //@import "city/smartCity/layout"
 @import "city/smartCity/profile"
-@import "city/smartCity/guides"
-@import "city/smartCity/planification"
-@import "city/smartCity/trips"
+//@import "city/smartCity/guides"
+//@import "city/smartCity/planification"
+//@import "city/smartCity/trips"
 @import "city/smartCity/frontpage"
 @import "city/smartCity/places"
 @import "city/smartCity/devise"
