--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -3,7 +3,17 @@
 	h3
 		text-align: center
 	ul
+		margin-left: auto
+		margin-right: auto
+		display: block
 		li
-			@include grid-fluid-span(1, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			margin-left: 9px
+			width: 7.6%
 			img 
 				width: 100%
+				height: 89px
+		li:first-child
+			margin-left: 0px
+			img 
+				width: 100%
+				height: 89px
