--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -10,9 +10,8 @@
 		</ul>
 	</div>
 
-
-	<div class="interest_points">
-		<%= render :partial => "home/interest_points" %>
+	<div id="interest_points">
+		<%= render :partial => "trips/interest_points" %>
 	</div>
 
 
