--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -1,25 +1,24 @@
-<li class="thumbnails_home">
-  <div class="thumbnail labels">
-    <%= link_to image_tag('toledo_basica.jpg'), Guide.first %>
-    <div class="caption">
-      <a href="/guides/1"><h4>Basic guide</h4></a>
-      <p>A short guide with the principal places... </p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
-  </div>
-</li>
+<div id="item-objetc" class="minimized ui-corner-all">
 
-<li class="thumbnails_home">
-  <div class="thumbnail labels">
-    <%= link_to image_tag('24_guide.jpg'), Guide.first  %>
-    <div class="caption">
-      <a href="/guides/1"><h4>Toledo in 24 hours</h4></a>
-      <p>The essence of Toledo in 24 hours</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
+  <%= link_to image_tag('toledo_basica.jpg'), Guide.first %>
+
+  <a href="#" id="button-resizable" class="ui-state-default ui-corner-all"></a>
+  <a class="btn" href="#">Add</a>
+
+  <a class="title">
+  <button class="btn btn-large" type="button">Large button</button> 
+  title
+</a>
+
+  <div class="info-show">
+    <p class="info-item">
+      Because you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyBecause you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyDogg, The Notorious B.I.G., and Young Jee
+    </p>
+    
   </div>
-</li>
+
+</div>
+
+
+        
+
