--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -43,6 +43,20 @@
 
     </script>
 
+    <script>
+        $(function() {
+            $( "#button-resizable" ).click(function(){
+                $( ".minimized" ).switchClass( "minimized", "expanded", 1000 );
+                $( ".expanded" ).switchClass( "expanded", "minimized", 1000 );
+                return false;
+            });
+        });
+    </script>
+
+
+
+
+
     <!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script> -->
