--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -38,5 +38,90 @@
 			color: $white
 #interest_points
 	@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	margin-left: 0px
+	display: inline-block
+	.checkbox-menu
+		label
+			display: inline-block
+	.content-checkbox
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		margin-left: 0px
+		display: block
+		height: 400px
+
+		ul
+			margin: 0px
+
+
+#item-objetc
+	position: relative
+.minimized
+	display: inline-block
+	float: left
+	width: 183px
+	height: 183px
+	position: relative
+	a
+		img
+			height: 183px
+			position: absolute
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+	a.title
+		background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
+		height: 23px
+		width: 100%
+		text-align: center
+		position: absolute
+		bottom: 0px
+		color: $white 
+		font-size: 16px
+		padding-top: 5px
+		text-decoration: none
+	.info-show
+		display: none
+
+
+#button-resizable
+	position: absolute
+	top: 0px
+	background-color: $red
+	width: 20px
+	height: 20px
+
+
+
+
+.expanded
+	display: inline-block
+	float: left
+	width: 360px
+	height: 360px
+	position: relative
+	a
+		img
+			height: 183px
+			position: absolute
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			display: block
+
+	a.title
+		background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
+		height: 23px
+		width: 100%
+		text-align: center
+		position: absolute
+		bottom: 49%
+		color: $white 
+		font-size: 16px
+		padding-top: 5px
+		text-decoration: none
+	.info-show
+		display: block
+		bottom: 0px
+		background-color: $red
+		position: absolute
+		height: 180px
+
 
 
