--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -2,3 +2,7 @@
 	@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 	height: 60px
 	display: inline-block
+
+body
+	.wrapper
+		width: 969px
