--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -1,24 +1,18 @@
 <div id="item-objetc" class="minimized ui-corner-all">
-
-  <%= link_to image_tag('toledo_basica.jpg'), Guide.first %>
-
-  <a href="#" id="button-resizable" class="ui-state-default ui-corner-all"></a>
-  <a class="btn" href="#">Add</a>
-
+  <div class="picture">
+    <%= link_to image_tag('toledo_basica.jpg'), Guide.first %>
+    <div class="actions">
+      <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
+      <button class="btn btn-small" type="button">add</button> 
+    </div>
+  </div>
   <a class="title">
-  <button class="btn btn-large" type="button">Large button</button> 
-  title
-</a>
-
+    <li>title</li>
+  </a>
   <div class="info-show">
     <p class="info-item">
       Because you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyBecause you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyDogg, The Notorious B.I.G., and Young Jee
     </p>
-    
   </div>
-
 </div>
-
-
-        
 
