--- a/app/views/trips/_interest_points.html.erb
+++ b/app/views/trips/_interest_points.html.erb
@@ -1,34 +1,34 @@
 <div class="checkbox-menu">
   <label for="check">guides</label>
-  <input type="checkbox" name="check" id="check" value="1" onchange="javascript:showContent()" />
+  <input type="checkbox" name="check" id="checkGuides" value="0" onchange="javascript:showContentGuides()" />
   
   <label for="check">routes</label>
-  <input type="checkbox" name="check" id="check" value="2" onchange="javascript:showContent()" />
+  <input type="checkbox" name="check" id="checkRoutes" value="0" onchange="javascript:showContentRoutes()" />
   
   <label for="check">points</label>
-  <input type="checkbox" name="check" id="check" value="3" onchange="javascript:showContent()" />
+  <input type="checkbox" name="check" id="checkPoints" checked="checked" onchange="javascript:showContentPoints()" />
 </div>
 
 
 
 
 <div class="content-checkbox">
-  <div id="content_guides" style="display: none;">
-    <ul class="thumbnails">
+  <div id="content_guides" >
+
       <%= render :partial => "guides/item" %>
-    </ul>
+
   </div>
 
-  <div id="content_routes" style="display: none;">
-    <ul class="thumbnails">
+  <div id="content_routes" >
+
       <%= render :partial => "routes/item" %>
-    </ul>
+
   </div>
 
-  <div id="content_points" style="display: none;">
-    <ul class="thumbnails">
+  <div id="content_points" >
+
       <%= render :partial => "points/item" %>
-    </ul>
+
   </div>
 </div>
 
