--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -7,13 +7,13 @@
 		margin-right: auto
 		display: block
 		li
-			margin-left: 9px
-			width: 7.6%
+			margin-left: 11px
+			width: 70px
 			img 
 				width: 100%
-				height: 89px
+				height: 70px
 		li:first-child
 			margin-left: 0px
 			img 
 				width: 100%
-				height: 89px
+				height: 70px
