--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -31,7 +31,7 @@
 		position: absolute
 		z-index: 2
 		margin-top: 20px
-		margin-left: 750px
+		margin-left: 590px
 		text-align: center
 		h1
 			margin-top: 100px
@@ -44,84 +44,126 @@
 		label
 			display: inline-block
 	.content-checkbox
-		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-		margin-left: 0px
-		display: block
-		height: 400px
+		display: inline-block
+		float: left
+		
+		.content_guides
+			display: inline-block
+			ul
+				margin: 0px
+		.content_routes
+			display: inline-block
+			ul
+				margin: 0px
+		.content_points
+			display: inline-block
+			ul
+				margin: 0px
 
-		ul
-			margin: 0px
+
+
+
 
 
 #item-objetc
+
 	position: relative
+	margin-right: 15px
+	margin-top: 15px
+
 .minimized
 	display: inline-block
 	float: left
-	width: 183px
-	height: 183px
+	width: 144px
+	height: 144px
 	position: relative
-	a
+	.picture
+		width: 144px
+		height: 144px
 		img
-			height: 183px
+			height: 144px
 			position: absolute
 			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			.actions
+				display: none
+		&:hover
+			.actions
+				display: block
+				width: 100%
+				position: absolute 
+				.btn
+					position: absolute 
+					right: 0
+					top: 0				
+				.button-resizable
+					position: absolute
+					top: 0px
+					background-color: $color1
+					width: 20px
+					height: 20px
 
 	a.title
 		background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
-		height: 23px
+		height: 26px
 		width: 100%
 		text-align: center
 		position: absolute
-		bottom: 0px
+		bottom: 0
 		color: $white 
 		font-size: 16px
-		padding-top: 5px
 		text-decoration: none
+		right: 0
+		.li
+			margin-top: 5px
 	.info-show
 		display: none
-
-
-#button-resizable
-	position: absolute
-	top: 0px
-	background-color: $red
-	width: 20px
-	height: 20px
-
-
 
 
 .expanded
 	display: inline-block
 	float: left
-	width: 360px
-	height: 360px
+	width: 306px
+	height: 306px
 	position: relative
-	a
+	.picture
+		width: 306px
+		height: 144px
 		img
-			height: 183px
+			height: 306
 			position: absolute
 			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-			display: block
-
 	a.title
 		background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
-		height: 23px
+		height: 26px
 		width: 100%
 		text-align: center
 		position: absolute
-		bottom: 49%
+		bottom: 46%
 		color: $white 
 		font-size: 16px
-		padding-top: 5px
 		text-decoration: none
+		right: 0
+		.li
+			margin-top: 5px
+
+	.btn
+		position: absolute 
+		right: 0
+	.button-resizable
+		position: absolute
+		top: 0px
+		background-color: $red
+		width: 20px
+		height: 20px
+
 	.info-show
 		display: block
 		bottom: 0px
-		background-color: $red
+		background: none repeat scroll 0 0 rgba(0, 0, 0, 0.90)
 		position: absolute
-		height: 180px
+		height: 120px
+		color: $white
+		padding: 10px
 
 
 
