--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -1,96 +1,17 @@
-<li>
-  <div class="thumbnail">
-    <%= link_to image_tag('/assets/places/3/zoco2.jpg'), Place.find(4)  %>
-    <div class="caption">
-      <a href="/places/4"><h4>Plaza Zocodover</h4></a>
-      <p>The old Tulaytula cattle market and...</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
+<div id="item-objetc" class="minimized ui-corner-all">
+  <div class="picture">
+    <%= link_to image_tag('toledo_basica.jpg'), Guide.first %>
+    <div class="actions">
+      <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
+      <button class="btn btn-small" type="button">add</button> 
     </div>
   </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= link_to image_tag('catedral.jpg'), Place.find(5)  %>
-    <div class="caption">
-      <a href="/places/5"><h4>Cathedral of Toledo</h4></a>
-      <p>The primatial cathedral and one of the three...</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
+  <a class="title">
+    <li>title</li>
+  </a>
+  <div class="info-show">
+    <p class="info-item">
+      Because you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyBecause you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyDogg, The Notorious B.I.G., and Young Jee
+    </p>
   </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= link_to image_tag('alcazar.JPG'), Place.find(6)  %>
-    <div class="caption">
-      <a href="/places/6"><h4>Alcázar of Toledo</h4></a>
-      <p>The Alcázar of Toledo is a stone fortification...</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
-  </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= image_tag('toledo2.jpg') %>
-    <div class="caption">
-      <a href=""><h4>Callejón del Diablo</h4></a>
-      <p>Narrow street full of legends and mistery</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
-  </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= image_tag('san_juan.jpg') %>
-    <div class="caption">
-      <a href=""><h4>Monastery of San Juan de los Reyes</h4></a>
-      <p>The monastery of San Juan de los Reyes was built by...</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
-  </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= image_tag('ruta_toledo.jpg') %>
-    <div class="caption">
-      <a href=""><h4>River walk</h4></a>
-      <p>justo odio egestas eget quam. Donec id elit </p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>    
-    </div>
-  </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= image_tag('adolfo.jpg') %>
-    <div class="caption">
-      <a href=""><h4>Adolfo's restaurant</h4></a>
-      <p>One of the best restaurants in Toledo </p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
-  </div>
-</li>
-<li>
-  <div class="thumbnail">
-    <%= image_tag('picaro.jpg') %>
-    <div class="caption">
-      <a href=""><h4>Pícaro's Coffe Shop</h4></a>
-      <p>Coffe and Concerts everiday</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
-  </div>
-</li>
+</div>
