--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,25 +1,17 @@
-<li class="thumbnails_home">
-  <div class="thumbnail labels">
-    <%= image_tag('templars.jpg') %>
-    <div class="caption">
-      <h4>Toledo Templar in the legend</h4>
-      <p>The mystery of the Knights Templar and...</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
+<div id="item-objetc" class="minimized ui-corner-all">
+  <div class="picture">
+    <%= link_to image_tag('toledo_basica.jpg'), Guide.first %>
+    <div class="actions">
+      <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
+      <button class="btn btn-small" type="button">add</button> 
     </div>
   </div>
-</li>
-<li class="thumbnails_home">
-  <div class="thumbnail labels">
-    <%= image_tag('magic.jpg') %>
-    <div class="caption">
-      <h4>Magical Journey to Toledo</h4>
-      <p>Toledo, an epicenter of the riddles...</p>
-      <p>
-        <a class="btn btn-primary" href="#">Add</a>
-      </p>
-    </div>
+  <a class="title">
+    <li>title</li>
+  </a>
+  <div class="info-show">
+    <p class="info-item">
+      Because you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyBecause you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyDogg, The Notorious B.I.G., and Young Jee
+    </p>
   </div>
-</li>
-
+</div>
