Refactor JS and checkbox default check

--- a/app/views/trips/_interest_points.html.erb
+++ b/app/views/trips/_interest_points.html.erb
@@ -1,12 +1,12 @@
 <div class="checkbox-menu">
   <label for="check">guides</label>
-  <input type="checkbox" name="check" id="checkGuides" value="0" onchange="javascript:showContentGuides()" />
+  <input type="checkbox" name="check" id="checkGuides" checked onchange="javascript:showContentGuides()" />
   
   <label for="check">routes</label>
-  <input type="checkbox" name="check" id="checkRoutes" value="0" onchange="javascript:showContentRoutes()" />
+  <input type="checkbox" name="check" id="checkRoutes" checked onchange="javascript:showContentRoutes()" />
   
   <label for="check">points</label>
-  <input type="checkbox" name="check" id="checkPoints" checked="checked" onchange="javascript:showContentPoints()" />
+  <input type="checkbox" name="check" id="checkPoints" checked onchange="javascript:showContentPoints()" />
 </div>
 
 
