--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -1,4 +1,21 @@
 // colors
 // -------------------------
-$color1:                  #ff4430 ;
-$color2:                  #ececec ;
+$color1:                  #0da592;
+$color2:                  #c07313;
+$color3: 									#f9f9f9;
+$color4: 									#20170d;
+
+
+// typography
+// -------------------------
+$title:
+$section:
+$link:
+$text: 
+$title_prg:								
+
+// Links
+// -------------------------
+$linkColor:             $color1;
+$linkColorHover:        darken($linkColor, 15%);
+$link_prg: 							white; 
