--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top hidden-phone hidden-tablet">
+<div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container nav-header">
       <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
