--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <body>
     <div class="wrapper container">
       <%= render :partial => "layouts/header" %>
+      holaaa
       <div class="banner"></div>
       <%= flashy %>
       <%= yield %>
