--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -1,21 +1,22 @@
 // colors
 // -------------------------
-$color1:                  #0da592;
-$color2:                  #c07313;
-$color3: 									#f9f9f9;
-$color4: 									#20170d;
+$color1: 									#0da592;
+$color2: 									#c07313;
+$background_color:				#f9f9f9;
+$color3: 									white;
+$color4:									#20170d;
 
 
 // typography
 // -------------------------
-$title:
-$section:
-$link:
-$text: 
-$title_prg:								
+//$title: 									"Lato";
+//$section: 								"Lato";
+//$link: 										"Lato";
+//$text: 										"OpenSans";
+//$title_prg:								"Lato";
 
 // Links
 // -------------------------
-$linkColor:             $color1;
+$linkColor:        			$color1;
 $linkColorHover:        darken($linkColor, 15%);
 $link_prg: 							white; 
