--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -9,11 +9,11 @@ $color4:									#20170d;
 
 // typography
 // -------------------------
-//$title: 									"Lato";
-//$section: 								"Lato";
-//$link: 										"Lato";
+//$title: 									"Lato light italic";
+//$section: 								"Lato light";
+//$link: 										"Lato regular";
 //$text: 										"OpenSans";
-//$title_prg:								"Lato";
+//$title_prg:								"Lato regular";
 
 // Links
 // -------------------------
