--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -13,7 +13,7 @@
 @import "city/base/mixin/mixin"
 //@import "city/base/frontpage"
 @import "city/base/fonts"
-@import "city/base/toolbar"
+//@import "city/base/toolbar"
 //@import "city/base/content"
 //@import "city/base/content_home"
 @import "city/base/wrapper_activities"
@@ -69,3 +69,4 @@
 @import "city/binakuru/trips"
 @import "city/binakuru/plannings"
 @import "city/binakuru/layout"
+@import "city/binakuru/toolbar"
