--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -12,7 +12,7 @@ $color4:									#20170d;
 //$title: 									"Lato light italic";
 //$section: 								"Lato light";
 //$link: 										"Lato regular";
-//$text: 										"OpenSans";
+//$text: 										"OpenSans regular";
 //$title_prg:								"Lato regular";
 
 // Links
