--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,14 +1,12 @@
-<div class="hidden-phone">    
 <% content_for :title do %>
-  <%= @user.name+" | "+t('site.name') %>
+  <%= "#{ @user.name } | #{ t 'site.name' }" %>
 <% end %>
-
 
 <% content_for :description do %>
   <% if @user.profile.description? %>
     <%= @user.profile.description%>
   <% else %>
-    <%= @user.name+" "+t('profile.is_on') + " "+ t('site.name') %>
+    <%= "#{ @user.name } #{ t('profile.is_on') } #{  t('site.name') }" %>
   <% end %>
 <% end %>
 
@@ -16,162 +14,5 @@
   <%= @user.profile.subject.tag_list%>
 <% end %>
 
-<%# sidebar %>
-
-<%= location(link_to(t('profile.one')+": "+truncate_name(sanitize @user.name)))%>
-              
-          
-  <% toolbar :profile, :subject => @user %>
-</div>
-
-
-<div id="content_profile" class="grid-3_center">
-  <div class="trip_content">
-    <ul class="trips">
-      <div class="city"><h4>TOLEDO</h4></div>
-      <li class="plannings">
-        <div class="planning_item">
-          <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Planning</h4>
-          </div>
-          <div class="caption_img">
-            <img src="/assets/guia2.png" alt="">
-          </div>
-        </div>
-      </li>
-
-      <li class="diaries" >
-        <a href="/diaries/1">
-          <div class="diary_item">
-            <img src="/assets/san_juan.jpg" alt="Toledo_basica">
-            <div class="caption">
-              <h4>Diary</h4>
-            </div>
-            <div class="caption_img">
-              <img src="/assets/diario24.png" alt="">
-            </div>
-          </div>
-        </a>
-      </li> 
-    </ul>
-    <ul class="trips">
-      <div class="city"><h4>LONDON</h4></div>
-      <li class="plannings">
-        <div class="planning_item">
-          <img src="/assets/london.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Planning</h4>
-          </div>
-          <div class="caption_img">
-            <img src="/assets/guia2.png" alt="">
-          </div>
-        </div>
-      </li>
-      <li class="diaries">
-        <div class="diary_item">
-          <img src="/assets/lodon2.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Diary</h4>
-          </div>
-          <div class="caption_img">
-            <img src="/assets/diario24.png" alt="">
-          </div>
-        </div>
-      </li> 
-    </ul>     
-    <ul class="trips">
-      <div class="city"><h4>VENICE</h4></div>
-      <li class="plannings">
-        <div class="planning_item">
-          <img src="/assets/venice.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Planning</h4>
-          </div>
-          <div class="caption_img">
-            <img src="/assets/guia2.png" alt="">
-          </div>
-        </div>
-      </li>
-      <li class="diaries">
-        <div class="diary_item">
-          <img src="/assets/venice2.jpg" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Diary</h4>
-          </div>
-          <div class="caption_img">
-            <img src="/assets/diario24.png" alt="">
-          </div>
-        </div>
-      </li> 
-    </ul>
-    <ul class="trips">
-      <div class="city"><h4>FI-CONTENT</h4></div>
-      <li class="plannings">
-        <div class="planning_item">
-          <img src="/assets/planning.png" alt="Toledo_basica">
-          <div class="caption">
-            <h4>Planning</h4>
-          </div>
-          <div class="caption_img">
-            <img src="/assets/guia2.png" alt="">
-          </div>
-        </div>
-      </li>
-      <li class="diaries">
-        <a href="/diaries/2">
-          <div class="diary_item">
-            <img src="/assets/diary.png" alt="Toledo_basica">
-            <div class="caption">
-              <h4>Diary</h4>
-            </div>
-            <div class="caption_img">
-              <img src="/assets/diario24.png" alt="">
-            </div>
-          </div>
-        </a>
-      </li> 
-    </ul>                
-  </div>
-</div>
-
-  <!--div class="guide_home">
-    my guides
-    <img src="/assets/prueba.png" width="115" height="100" style="background-image:url(/assets/toledo2.jpg);" alt="texto" />
-    <ul class="thumbnails">
-        <%#= render :partial => "guides/item" %>
-    </ul>
-  </div>
-    <div class="my_diaries">
-      my diaries
-      <ul class="thumbnails">
-    <%#= render :partial => "diaries/item" %>
-  </ul>
-  </div>
-  </div-->
-
-
-
-
-
-
- <div class="social grid-3_right">
-  <div class="hidden-phone">
-    <%= render :partial => "users/groups",
-       :locals  => { :user => @user } %>
-  </div>
-
-
-
-  <div class="time-time">
-  <%= render :partial => "activities/index",
-       :locals  => { :activities => @user.wall(:profile, :for => current_subject).page(params[:page]),
-                     :owner => @user } %>
-
-  <%= javascript_tag do %>
-    $(function(){  
-      SocialStream.Timeline.init();  
-    });
-  <% end %>
-  </div>
-</div>
+<%#= render :partial => 'show' %>
+erfgweqrtwerrtwertwertweetfwtwetr
