--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -61,7 +61,7 @@
 //@import "city/smartCity/trips"
 @import "city/smartCity/frontpage"
 @import "city/smartCity/places"
-@import "city/smartCity/devise"
+//@import "city/smartCity/devise"
 @import "city/smartCity/comment"
 
 
@@ -69,3 +69,4 @@
 @import "city/binakuru/trips"
 @import "city/binakuru/plannings"
 @import "city/binakuru/layout"
+@import "city/binakuru/devise"
