--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -15,4 +15,12 @@
 <% end %>
 
 <%#= render :partial => 'show' %>
-erfgweqrtwerrtwertwertweetfwtwetr
+<div id=" profile_toolbar">
+  <ul class="toolbar">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</div>
