--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -10,7 +10,7 @@
     .carousel-caption
       @include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
       float: left
-      background-color: $color2
+      background-color: $white
       position: static
       height: 100%
       height: 330px
@@ -24,10 +24,10 @@
         display: inline-block
 
   .title-trip
-    height: 240px
-    width: 240px
+    height: 188px
+    width: 188px
     background-color: $color1
-    @include border-radius(120px)
+    @include border-radius(94px)
     position: absolute
     z-index: 2
     margin-top: 20px
