--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -2,9 +2,8 @@
 // -------------------------
 $color1: 									#0da592;
 $color2: 									#c07313;
-$background_color:				#f9f9f9;
-$color3: 									white;
-$color4:									#20170d;
+$color3:									#20170d;
+$bodyBackground:          #f9f9f9;
 
 
 // typography
