variable_fonts and profile_toolbar

--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -8,11 +8,11 @@ $bodyBackground:          #f9f9f9;
 
 // typography
 // -------------------------
-//$title: 									"Lato light italic";
-//$section: 								"Lato light";
+//$title: 									"Lato book 300 italic";
+//$section: 								"Lato book 300";
 //$link: 										"Lato regular";
-//$text: 										"OpenSans regular";
-//$title_prg:								"Lato regular";
+//$text: 										"OpenSans normal 400";
+//$title_prg:								"Lato normal 400";
 
 // Links
 // -------------------------
