--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,7 +12,7 @@
 @import "city/base/icons/icon"
 @import "city/base/mixin/mixin"
 //@import "city/base/frontpage"
-@import "city/base/fonts"
+//@import "city/base/fonts"
 //@import "city/base/toolbar"
 //@import "city/base/content"
 //@import "city/base/content_home"
@@ -71,4 +71,6 @@
 @import "city/binakuru/layout"
 @import "city/binakuru/devise"
 @import "city/binakuru/toolbar"
+@import "city/binakuru/fonts"
+
 
