--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -36,6 +36,7 @@
     h1
       margin-top: 100px
       color: $white
+      font-family: $title
 #interest_points
   @include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
   margin-left: 0px
