--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -18,5 +18,5 @@ $title_prg:								"LatoRegular";
 // -------------------------
 $linkColor:        			$color1;
 $linkColorHover:        darken($linkColor, 15%);
-$link_prg: 							white; 
+$link_prg: 							$red; 
 
