--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -10,7 +10,7 @@
     .carousel-caption
       @include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
       float: left
-      background-color: $white
+      background-color: transparent
       position: static
       height: 100%
       height: 330px
@@ -31,10 +31,10 @@
     position: absolute
     z-index: 2
     margin-top: 20px
-    margin-left: 590px
+    margin-left: 625px
     text-align: center
     h1
-      margin-top: 100px
+      margin-top: 70px
       color: $white
       font-family: $title
 #interest_points
@@ -44,6 +44,7 @@
   .checkbox-menu
     label
       display: inline-block
+      color: $red
   .content-checkbox
     display: inline-block
     float: left
