--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -5,14 +5,25 @@ body
 	width: 100%
 	height: 132px
 	ul
-		display: inline-block
 		li 
-			.profile_button
-				height: 100%
-				width: 184px
-				margin-right: 25px
-				margin-left: 0px
-				margin-top: 0px
-				margin-bottom: 0px
-				color: $color1
-				opacity: 0.9
+			display: inline-block
+			height: 102px
+			width: 147px
+			background-color: $color1
+			opacity: 0.9
+			.toolbar_contacts
+				height: 38px
+				margin-bottom: 8px
+			.toolbar_messages
+				height: 38px
+.no_gutter 
+	margin-right: 0px
+	margin-left: 0px
+	margin-top: 0px
+	margin-bottom: 0px
+.gutter
+	margin-right: 8px
+	margin-left: 0px
+	margin-top: 0px
+	margin-bottom: 0px
+				
