--- a/app/assets/stylesheets/city/binakuru/devise.css.sass
+++ b/app/assets/stylesheets/city/binakuru/devise.css.sass
@@ -1,1 +1,14 @@
-#forgot-pass
+.div_registration
+  margin-left: auto
+  margin-right: auto
+  
+.container
+  margin-left: 40%
+  margin-right: 50%
+
+.options
+  margin-top: 200px
+
+    
+
+ 
