--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -10,7 +10,7 @@
     .carousel-caption
       @include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
       float: left
-      background-color: transparent
+      background-color: $white
       position: static
       height: 100%
       height: 330px
