--- a/app/assets/stylesheets/city/binakuru/devise.css.sass
+++ b/app/assets/stylesheets/city/binakuru/devise.css.sass
@@ -1,13 +1,21 @@
-.div_registration
-  margin-left: auto
-  margin-right: auto
-  
-.container
-  margin-left: 40%
-  margin-right: 50%
+#registration
+  .div_registration
+    margin-left: auto
+    margin-right: auto
+    display: block
+    width: 210px
+    .options
+      margin-top: 100px
+      margin-left: auto
+      margin-right: auto
+      display: block
+      width: 65px
 
-.options
-  margin-top: 200px
+.footer
+  margin-left: 39%
+  margin-right: auto
+
+
 
     
 
