--- a/app/views/layouts/_header_signed_out.erb
+++ b/app/views/layouts/_header_signed_out.erb
@@ -5,3 +5,25 @@
     <% end %>
 
 </header>
+
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container nav-header">
+      <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'logo') %>
+      <a href="/home "class="brand">HELLOWORLD</a>
+      
+    
+      <div class="search-nav pull-right">
+        <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
+          <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
